@@ -16,6 +16,29 @@
   <url type="bugtracker">https://github.com/mike-fabian/ibus-typing-booster/issues</url>
   <url type="help">https://mike-fabian.github.io/ibus-typing-booster/documentation.html</url>
   <releases>
+    <release version="1.5.26" date="2017-03-16" urgency="medium">
+      <description>
+        <ul>
+          <li>
+            Update translations from zanata (de updated)
+          </li>
+          <li>
+            Fix display of warning message when a dictionary is not installed.
+          </li>
+          <li>
+            Emulate xdg.BaseDirectory.save_data_path() on systems
+            which lack pyxdg
+          </li>
+          <li>
+            Show the skin tone popover also on a long press gesture
+          </li>
+          <li>
+            Fix pyhunspell support Resolves:
+            https://github.com/mike-fabian/ibus-typing-booster/issues/5#issuecomment-286251818
+          </li>
+        </ul>
+      </description>
+    </release>
     <release version="1.5.25" date="2017-03-13" urgency="medium">
       <description>
         <ul>
