@@ -1,4 +1,12 @@
 * Author: Mike FABIAN <mfabian@redhat.com>
+* 16 Mar 2017 Released 1.5.26 version
+* Update translations from zanata (de updated)
+* Fix display of warning message when a dictionary is not installed.
+* Emulate xdg.BaseDirectory.save_data_path() on systems which lack pyxdg
+* Show the skin tone popover also on a long press gesture
+* Fix pyhunspell support Resolves: https://github.com/mike-fabian/ibus-typing-booster/issues/5#issuecomment-286251818
+
+* Author: Mike FABIAN <mfabian@redhat.com>
 * 13 Mar 2017 Released 1.5.25 version
 * Update translations from zanata (de, pl, uk updated, zh_CN new)
 * Show the categories as well on right mouse click in emoji-picker
